# Orangeliquid-Vault

./: .gitignore  README.md  main.py  pyproject.toml
.streamlit/: config.toml
app/: auth.py  crud_vault.py  database.py  encryption.py
app/models/: schemas.py  vault_entry.py
app/utils/: entry_helpers.py  generator.py  strength.py
ui/: auth_ui.py  vault_ui.py
