[project]
name = "orangeliquid-vault"
version = "0.1.0"
description = "A secure, local password and file vault with encryption"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "cryptography>=45.0.4",
    "pydantic[email]>=2.11.7",
    "ruff>=0.12.1",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.46.1",
]
